--- a/README
+++ b/README
@@ -1,6 +1,23 @@
+## Schedule Maker 
+### for Aspen to Google Calendar csv
+
 Create a csv for import into Google Calendar with all classes for the year. 
 
-Dependencies: 
+###Dependencies: 
 python3
-pandas
+[pandas](https://pandas.pydata.org/)
 
+###Usage:
+Before using, make sure to change the following settings in make_schedule.py:
+dates_file: Export of school days from Aspen
+semester_cutoff: First day of second semester
+
+Specify the input file or input directory on the command line, -d for directory, -f for file.
+Optionally specify the output directory with -o.
+
+###Examples:
+`python3 make_schedule.py -d schedules -o gcal`
+This creates a csv for every file in the directory schedules and saves them in the directory gcal.
+
+`python3 make_schedule.py -f 'Cristina 2018-2019.csv'`
+This creates a csv for one file and outputs a file called 'schedule.csv' in the current directory. 
